--- a/course/templates/course/teacher_dashboard.html
+++ b/course/templates/course/teacher_dashboard.html
@@ -134,7 +134,7 @@
             const token = localStorage.getItem('access_token');
             if (!token) {
                 alert('You are not authenticated. Please log in.');
-                window.location.replace('/login/');
+                window.location.replace('/login');
                 return;
             }
 
