--- a/course/templates/course/login.html
+++ b/course/templates/course/login.html
@@ -49,7 +49,7 @@
 
       <!-- Register & Social Login -->
       <div class="text-center mt-6">
-        <p class="text-sm text-gray-600">Don't have an account? <a href="register.html" class="text-blue-500 hover:underline">Register Now</a></p>
+        <p class="text-sm text-gray-600">Don't have an account? <a href="{% url 'register' %}" class="text-blue-500 hover:underline">Register Now</a></p>
       </div>
     </div>
   </div>
